Fix favicon indexing for Google search results
- Remove dynamic icon.tsx file to allow static favicon.ico to be used
- Update icon paths in layout.tsx to use relative paths instead of absolute URLs
- Update manifest.json icon paths to relative paths for consistency
- This ensures Google can properly index and display the site favicon in search results

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,18 @@
   "theme_color": "#06091F",
   "icons": [
     {
-      "src": "https://cardrummyapp.com.pk/favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "16x16 32x32 48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "https://cardrummyapp.com.pk/card-rummy.webp",
+      "src": "/card-rummy-logo.webp",
       "sizes": "192x192 512x512",
       "type": "image/webp",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cardrummyapp.com.pk/card-rummy-logo.webp",
+      "src": "/card-rummy.webp",
       "sizes": "512x512",
       "type": "image/webp",
       "purpose": "any"
